force-app/main/default/objects/Hiring_Panel_Member_Availability__c/Hiring_Panel_Member_Availability__c.object-meta.xml
<CustomObject>
    <label>Hiring Panel Member Availability</label>
    <nameField>
        <displayFormat>Avail-{0000}</displayFormat>
        <label>Hiring Panel Member Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiring Panel Members Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>