force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Available_For_Entire_Event__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Entire_Event__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available For Entire Event</label>
    <type>Checkbox</type>
</CustomField>