force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Hiring_Panel_Member__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Panel_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hiring Panel Member</label>
    <referenceTo>HiringPanelMember__c</referenceTo>
    <relationshipLabel>Hiring Panel Members Availability</relationshipLabel>
    <relationshipName>Hiring_Panel_Members_Availability</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>