force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Interview_Event__c.field-meta.xml
<CustomField>
    <fullName>Interview_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interview Event</label>
    <referenceTo>InterviewEvent__c</referenceTo>
    <relationshipLabel>Hiring Panel Members Availability</relationshipLabel>
    <relationshipName>Hiring_Panel_Members_Availability</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>