force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Member_Grade_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Grade_Number__c</fullName>
    <formula>VALUE( TEXT(Panel_Member_Grade__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member_Grade_Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>