force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>Hiring_Panel_Member__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>