force-app/main/default/objects/Hiring_Panel_Member_Availability__c/fields/Override_role__c.field-meta.xml
<CustomField>
    <fullName>Override_role__c</fullName>
    <label>Override role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Panel_Member_Role</valueSetName>
    </valueSet>
</CustomField>